--- a/OpenGLHelloWorld/OpenGLHelloWorld.vcxproj
+++ b/OpenGLHelloWorld/OpenGLHelloWorld.vcxproj
@@ -110,12 +110,12 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>D:\OpenGLExtensionLibrary\GLEW\glew-2.1.0\include;D:\OpenGLExtensionLibrary\GLFW\include</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)/../../ExternalLib/GLEW/include;$(SolutionDir)/../../ExternalLib/GLFW/include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>D:\OpenGLExtensionLibrary\GLEW\glew-2.1.0\lib\Release\x64;D:\OpenGLExtensionLibrary\GLFW\lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)/../../ExternalLib/GLEW/lib/Release/x64;$(SolutionDir)/../../ExternalLib/GLFW/lib-vc2022;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>opengl32.lib;glew32.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
